adding clearfix and centering alignment

--- a/site.html
+++ b/site.html
@@ -20,11 +20,11 @@
         <li><a href="#gift">Home</a></li>
       </ul>
     </div>
-    <div id='gift'>
+    <div id='gift' class="clearfix">
       <img name='gift' src='imgs/gift.png'>
-      <span>Акция неслыханной щедрости! При оптовом заказе детским садикам и фирмам, содержащим коал - 1000 леденцов в подарок*</span>
+      <span class='stock'>Акция неслыханной щедрости! При оптовом заказе детским садикам и фирмам, содержащим коал - 1000 леденцов в подарок*</span>
       <form>
-        Спешите заказать тонны удовольствия!
+        Спешите заказать тонны удовольствия!<br><br><br><br>
         Имя:<br>
         <input type="text" name="firstname" placeholder="ФИО"><br>
         Телефон:<br>
@@ -35,7 +35,9 @@
       </form>
     </div>
     <div id='aboutUs'>
-      <div class='about'></div>
+      <div class='about'>
+        <span></span>
+      </div>
       <div class='about'></div>
       <div class='about'></div>
     </div>
