--- a/siteeeeeeeeeeee.html
+++ b/siteeeeeeeeeeee.html
@@ -23,7 +23,7 @@
     <div id='gift' class="clearfix otstup">
       <img name='gift' src='imgs/gift.png'>
       <span class='stock'>Акция неслыханной щедрости! При оптовом заказе детским садикам и фирмам, содержащим коал - 1000 леденцов в подарок*</span>
-      <form>
+      <form class="gift">
         Спешите заказать тонны удовольствия!<br><br><br><br>
         Имя:<br>
         <input type="text" name="firstname" placeholder="ФИО"><br>
@@ -170,42 +170,63 @@
     </div>
 
 
-    <div id='comments' class="clearfix otstup centering">
-      <div class="carousel-wrapper">
-      	<input type="radio" checked="checked" id="slide1" class="carousel-selector" name="carousel-selector" />
-      	<input type="radio" id="slide2" class="carousel-selector" name="carousel-selector" />
-      	<input type="radio" id="slide3" class="carousel-selector" name="carousel-selector" />
+    <div id='comments' class="clearfix otstup">
+      <div class="carousel-wrapper centering commentOut">
 
-      	<ul class="carousel-items">
-      		<li class="carousel-item carousel-item-blue">
-      			<img class="comment" src="imgs/di-kaprio-javljaetsja-na-opredelennuju-dolju-russkim_rect_73964f9ad23fe44bdccc31d53472a745.jpg">
-            Текст 1
-      		</li>
-      		<li class="carousel-item carousel-item-red">
-            <img class="comment" src="imgs/koala_35973701_orig_.jpg">
-      			Текст 2
-      		</li>
-      		<li class="carousel-item carousel-item-green">
-            <img class="comment" src="imgs/Кличко_Виталий_2.jpg">
-      			Текст 3
-      		</li>
-      	</ul>
+        	<input type="radio" checked="checked" id="slide1" class="carousel-selector" name="carousel-selector" />
+        	<input type="radio" id="slide2" class="carousel-selector" name="carousel-selector" />
+        	<input type="radio" id="slide3" class="carousel-selector" name="carousel-selector" />
 
-      	<ul class="carousel-labels">
-      		<li class="carousel-label">
-      			<label for="slide1"></label>
-      		</li>
-      		<li class="carousel-label">
-      			<label for="slide2"></label>
-      		</li>
-      		<li class="carousel-label">
-      			<label for="slide3"></label>
-      		</li>
-      	</ul>
+
+        	<ul class="carousel-items">
+        		<li class="carousel-item">
+              <div class="commentIn">
+          			<img class="comment" src="imgs/di-kaprio-javljaetsja-na-opredelennuju-dolju-russkim_rect_73964f9ad23fe44bdccc31d53472a745.jpg">
+                <span>Текст 1</span>
+              </div>
+        		</li>
+        		<li class="carousel-item">
+              <div class="commentIn">
+                <img class="comment" src="imgs/koala_35973701_orig_.jpg">
+          			Текст 2
+              </div>
+        		</li>
+        		<li class="carousel-item">
+              <div class="commentIn">
+                <img class="comment" src="imgs/Кличко_Виталий_2.jpg">
+          			Текст 3
+              </div>
+        		</li>
+        	</ul>
+
+        	<ul class="carousel-labels">
+        		<li class="carousel-label">
+        			<label for="slide1"></label>
+        		</li>
+        		<li class="carousel-label">
+        			<label for="slide2"></label>
+        		</li>
+        		<li class="carousel-label">
+        			<label for="slide3"></label>
+        		</li>
+        	</ul>
+
       </div>
     </div>
 
-    <div id='contacts'>
+    <div id='contacts' class="clearfix otstup">
+      <div id="map"></div>
+
+
+      <form class="map" >
+        Наш адддрсе</br>
+        Наш адддрсе</br>
+        Наш адддрсе</br>
+        Наш адддрсе</br>
+        Наш адддрсе</br>
+      </form>
     </div>
   </body>
+  <script src="map.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9LPBNt6tJXcMMVt_QiDROjqGqNW8PZ4Q&callback=initMap"></script>
 </html>
