after review changes - part1

--- a/site.html
+++ b/site.html
@@ -22,17 +22,19 @@
         </ul>
     </nav>
     <div id='gift' class="clearfix otstup">
-      <img name='gift' src='imgs/gift.png'>
-      <span class='stock'>Акция неслыханной щедрости! При оптовом заказе детским садикам и фирмам, содержащим коал - 1000 леденцов в подарок*</span>
-      <form class="gift">
-        Спешите заказать тонны удовольствия!<br><br><br><br>
-        <label class="submitForm">Имя: </label><input type="text" name="firstname" class="submitForm" placeholder="ФИО"><br>
-        <label class="submitForm">Телефон: </label>
-        <input type="tel" name="lastname" class="submitForm" placeholder="xxx-xxx-xx-xx"><br>
-        <label class="submitForm">E-mail: </label>
-        <input type="email" name="email" class="submitForm" placeholder="x@x.xx"><br><br>
-        <input type="submit" value="Заказать">
-      </form>
+      <div class="centering">
+        <img name='gift' src='imgs/gift.png'>
+        <span class='stock'>Акция неслыханной щедрости! При оптовом заказе детским садикам и фирмам, содержащим коал - 1000 леденцов в подарок*</span>
+        <form class="gift">
+          Спешите заказать тонны удовольствия!<br><br><br><br>
+          <label class="submitForm">Имя: </label><input type="text" name="firstname" class="submitForm" placeholder="ФИО"><br>
+          <label class="submitForm">Телефон: </label>
+          <input type="tel" name="lastname" class="submitForm" placeholder="xxx-xxx-xx-xx"><br>
+          <label class="submitForm">E-mail: </label>
+          <input type="email" name="email" class="submitForm" placeholder="x@x.xx"><br><br>
+          <input type="submit" value="Заказать">
+        </form>
+      </div>
     </div>
 
 
@@ -44,10 +46,10 @@
             <!-- ontouchstart="this.classList.toggle('hover');" -->
           	<div class="flipper">
           		<div class="front">
-          			<img src="imgs/aboutUs1.jpg">
+          			<img src="imgs/aboutUs1.png">
           		</div>
           		<div class="back">
-          			<img src="imgs/aboutUs1Hover.jpg">
+          			<img src="imgs/aboutUs1Hover.png">
           		</div>
           	</div>
           </div>
@@ -58,10 +60,10 @@
             <!-- ontouchstart="this.classList.toggle('hover');" -->
             <div class="flipper">
               <div class="front">
-                <img src="imgs/aboutUs2.jpg" class='mardinAuto'>
+                <img src="imgs/aboutUs2.png" class='mardinAuto'>
               </div>
               <div class="back">
-                <img src="imgs/aboutUs2Hover.jpg">
+                <img src="imgs/aboutUs2Hover.png">
               </div>
             </div>
           </div>
@@ -72,10 +74,10 @@
             <!-- ontouchstart="this.classList.toggle('hover');" -->
             <div class="flipper">
               <div class="front">
-                <img src="imgs/aboutUs3.jpg">
+                <img src="imgs/aboutUs3.png">
               </div>
               <div class="back">
-                <img src="imgs/aboutUs3Hover.jpg">
+                <img src="imgs/aboutUs3Hover.png">
               </div>
             </div>
           </div>
@@ -182,20 +184,20 @@
         	<ul class="carousel-items">
         		<li class="carousel-item">
               <div class="commentIn">
-          			<img class="comment" src="imgs/di-kaprio-javljaetsja-na-opredelennuju-dolju-russkim_rect_73964f9ad23fe44bdccc31d53472a745.jpg">
-                <p class="textComment">Я бы никогда не выиграл оскар, если бы не ел эвкалиптовые леденцы!</p>
+                <img class="comment circular" src="imgs/di-kaprio-javljaetsja-na-opredelennuju-dolju-russkim_rect_73964f9ad23fe44bdccc31d53472a745.jpg">
+                <p class="textComment">"Я бы никогда не выиграл оскар, если бы не ел эвкалиптовые леденцы!"</p>
               </div>
         		</li>
         		<li class="carousel-item">
               <div class="commentIn">
-                <img class="comment" src="imgs/koala_35973701_orig_.jpg">
-          			<p class="textComment">Раньше мне было стыдно, что я был вынужден есть листья у всех на виду, но теперь, я могу наслаждаться своим любимым эвкалиптом в культурном обществе.</p>
+                <img class="comment circular" src="imgs/koala_35973701_orig_.jpg">
+          			<p class="textComment">"Раньше мне было стыдно, что я был вынужден есть листья у всех на виду, но теперь, я могу наслаждаться своим любимым эвкалиптом в культурном обществе."</p>
               </div>
         		</li>
         		<li class="carousel-item">
               <div class="commentIn">
-                <img class="comment" src="imgs/Кличко_Виталий_2.jpg">
-          			<p class="textComment">Каждый знает, что в эвкалипте, как в любом, есть, потому что быть должно, но, даже если бы завтра сказали "уже нет" - я бы не поверил.</p>
+                <img class="comment circular" src="imgs/Кличко_Виталий_2.jpg">
+                <p class="textComment">"Каждый знает, что в эвкалипте, как в любом, есть, потому что быть должно, но, даже если бы завтра сказали "уже нет" - я бы не поверил."</p>
               </div>
         		</li>
         	</ul>
