--- a/site.html
+++ b/site.html
@@ -97,8 +97,6 @@
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img class="picture" src="imgs/851d874a192d8a2896516efc7c114c79.jpg"/>
               </div>
-              <!-- <img src="imgs/851d874a192d8a2896516efc7c114c79.jpg" class="picture">
-              <img src="imgs/mandat-recherche-achat.png" class="lupa"> -->
               <span class="caption">Картинка</span>
             </td>
             <td>
@@ -168,54 +166,129 @@
             </td>
           </tr>
         </table>
+
+        <!-- <div class="table_data">
+            <dl>
+              <dt>
+                <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
+                <img class="picture" src="imgs/851d874a192d8a2896516efc7c114c79.jpg"/>
+              </dt>
+              <dd><span class="caption">Картинка</span></dd>
+            </dl>
+            <dl>
+              <dt>
+                <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
+                <img class="picture" src="imgs/851d874a192d8a2896516efc7c114c79.jpg"/>
+              </dt>
+              <dd><span class="caption">Картинка</span></dd>
+            </dl>
+            <dl>
+              <dt>
+                <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
+                <img class="picture" src="imgs/851d874a192d8a2896516efc7c114c79.jpg"/>
+              </dt>
+              <dd><span class="caption">Картинка</span></dd>
+            </dl>
+            <dl>
+              <dt>
+                <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
+                <img class="picture" src="imgs/851d874a192d8a2896516efc7c114c79.jpg"/>
+              </dt>
+              <dd><span class="caption">Картинка</span></dd>
+            </dl>
+            <dl>
+              <dt>
+                <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
+                <img class="picture" src="imgs/851d874a192d8a2896516efc7c114c79.jpg"/>
+              </dt>
+              <dd><span class="caption">Картинка</span></dd>
+            </dl>
+            <dl>
+              <dt>
+                <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
+                <img class="picture" src="imgs/851d874a192d8a2896516efc7c114c79.jpg"/>
+              </dt>
+              <dd><span class="caption">Картинка</span></dd>
+            </dl>
+            <dl>
+              <dt>
+                <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
+                <img class="picture" src="imgs/851d874a192d8a2896516efc7c114c79.jpg"/>
+              </dt>
+              <dd><span class="caption">Картинка</span></dd>
+            </dl>
+            <dl>
+              <dt>
+                <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
+                <img class="picture" src="imgs/851d874a192d8a2896516efc7c114c79.jpg"/>
+              </dt>
+              <dd><span class="caption">Картинка</span></dd>
+            </dl>
+            <dl>
+              <dt>
+                <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
+                <img class="picture" src="imgs/851d874a192d8a2896516efc7c114c79.jpg"/>
+              </dt>
+              <dd><span class="caption">Картинка</span></dd>
+            </dl>
+            <dl>
+              <dt>
+                <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
+                <img class="picture" src="imgs/851d874a192d8a2896516efc7c114c79.jpg"/>
+              </dt>
+              <dd><span class="caption">Картинка</span></dd>
+            </dl>
+        </div> -->
+
+
       </div>
     </div>
 
 
     <div id='comments' class="clearfix otstup">
       <div class="centering">
-      <h2>Что о нас говорят</h2>
-      <div class="carousel-wrapper commentOut">
+        <h2>Что о нас говорят</h2>
+        <div class="carousel-wrapper commentOut">
 
-        	<input type="radio" checked="checked" id="slide1" class="carousel-selector" name="carousel-selector" />
-        	<input type="radio" id="slide2" class="carousel-selector" name="carousel-selector" />
-        	<input type="radio" id="slide3" class="carousel-selector" name="carousel-selector" />
+          	<input type="radio" checked="checked" id="slide1" class="carousel-selector" name="carousel-selector" />
+          	<input type="radio" id="slide2" class="carousel-selector" name="carousel-selector" />
+          	<input type="radio" id="slide3" class="carousel-selector" name="carousel-selector" />
 
-        	<ul class="carousel-items">
-        		<li class="carousel-item">
-              <div class="commentIn">
-                <img class="comment circular" src="imgs/di-kaprio-javljaetsja-na-opredelennuju-dolju-russkim_rect_73964f9ad23fe44bdccc31d53472a745.jpg">
-                <p class="textComment">"Я бы никогда не выиграл оскар, если бы не ел эвкалиптовые леденцы!"</p>
-              </div>
-        		</li>
-        		<li class="carousel-item">
-              <div class="commentIn">
-                <img class="comment circular" src="imgs/koala_35973701_orig_.jpg">
-          			<p class="textComment">"Раньше мне было стыдно, что я был вынужден есть листья у всех на виду, но теперь, я могу наслаждаться своим любимым эвкалиптом в культурном обществе."</p>
-              </div>
-        		</li>
-        		<li class="carousel-item">
-              <div class="commentIn">
-                <img class="comment circular" src="imgs/Кличко_Виталий_2.jpg">
-                <p class="textComment">"Каждый знает, что в эвкалипте, как в любом, есть, потому что быть должно, но, даже если бы завтра сказали "уже нет" - я бы не поверил."</p>
-              </div>
-        		</li>
-        	</ul>
+          	<ul class="carousel-items">
+          		<li class="carousel-item">
+                <div class="commentIn">
+                  <img class="comment circular" src="imgs/di-kaprio-javljaetsja-na-opredelennuju-dolju-russkim_rect_73964f9ad23fe44bdccc31d53472a745.jpg">
+                  <p class="textComment">"Я бы никогда не выиграл оскар, если бы не ел эвкалиптовые леденцы!"</p>
+                </div>
+          		</li>
+          		<li class="carousel-item">
+                <div class="commentIn">
+                  <img class="comment circular" src="imgs/koala_35973701_orig_.jpg">
+            			<p class="textComment">"Раньше мне было стыдно, что я был вынужден есть листья у всех на виду, но теперь, я могу наслаждаться своим любимым эвкалиптом в культурном обществе."</p>
+                </div>
+          		</li>
+          		<li class="carousel-item">
+                <div class="commentIn">
+                  <img class="comment circular" src="imgs/Кличко_Виталий_2.jpg">
+                  <p class="textComment">"У меня есть два заместителя, четыре из которых уже месяц лежат в кабинете министров, и которых назначить невозможно. Не знаю, почему."</p>
+                </div>
+          		</li>
+          	</ul>
 
-        	<ul class="carousel-labels">
-        		<li class="carousel-label">
-        			<label for="slide1"></label>
-        		</li>
-        		<li class="carousel-label">
-        			<label for="slide2"></label>
-        		</li>
-        		<li class="carousel-label">
-        			<label for="slide3"></label>
-        		</li>
-        	</ul>
+          	<ul class="carousel-labels">
+          		<li class="carousel-label">
+          			<label for="slide1"></label>
+          		</li>
+          		<li class="carousel-label">
+          			<label for="slide2"></label>
+          		</li>
+          		<li class="carousel-label">
+          			<label for="slide3"></label>
+          		</li>
+          	</ul>
 
+        </div>
       </div>
-    </div>
     </div>
 
     <div id='contacts' class="clearfix otstup">
@@ -231,6 +304,11 @@
       </form>
     </div>
   </div>
+
+  <footer id="footer" class="centering">
+     Copyright &copy; 2016 Evgeniy Tatarin
+  </footer>
+
   </body>
   <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="map.js"></script>
