full section map; changing gallery to divs

--- a/site.html
+++ b/site.html
@@ -90,82 +90,76 @@
     <div id='gallery' class="clearfix otstup">
       <div class="centering">
         <h2>Галерея</h2>
-        <table class="gallery">
-          <tr>
-            <td>
-              <div style="position: relative; left: 0; top: 0;">
+            <div class="galleryItem">
+              <div class="galleryItemImg">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img class="picture" src="imgs/851d874a192d8a2896516efc7c114c79.jpg"/>
               </div>
               <span class="caption">Картинка</span>
-            </td>
-            <td>
+            </div>
+            <div class="galleryItem">
               <div style="position: relative; left: 0; top: 0;">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/evkalipt-10.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
-            </td>
-            <td>
+            </div>
+            <div class="galleryItem">
               <div style="position: relative; left: 0; top: 0;">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img class="picture" src="imgs/5063-eucalyptus-oil-for-skin-hair-health.jpg"/>
               </div>
               <span class="caption">Картинка</span>
-            </td>
-            <td>
+            </div>
+            <div class="galleryItem">
               <div style="position: relative; left: 0; top: 0;">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/Azeite-de-oliva-remedios.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
-            </td>
-            <td>
+            </div>
+            <div class="galleryItem">
               <div style="position: relative; left: 0; top: 0;">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/how-to-cure-asthma-eucalyptus-oil.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
-            </td>
-          </tr>
-          <tr>
-            <td>
+            </div>
+            <div class="galleryItem">
               <div style="position: relative; left: 0; top: 0;">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/eucalyptus-oil-for-hair.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
-            </td>
-            <td>
+            </div>
+            <div class="galleryItem">
               <div style="position: relative; left: 0; top: 0;">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/tea-sinus.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
-            </td>
-            <td>
+            </div>
+            <div class="galleryItem">
               <div style="position: relative; left: 0; top: 0;">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/aceite-eucalipto.jpeg" class="picture">
               </div>
               <span class="caption">Картинка</span>
-            </td>
-            <td>
+            </div>
+            <div class="galleryItem">
               <div style="position: relative; left: 0; top: 0;">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/59d2ced7934e49dc5e991dd1e11bd6e1.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
-            </td>
-            <td>
+            </div>
+            <div class="galleryItem">
               <div style="position: relative; left: 0; top: 0;">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/851d874a192d8a2896516efc7c114c79.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
-            </td>
-          </tr>
-        </table>
+            </div>
 
         <!-- <div class="table_data">
             <dl>
@@ -294,8 +288,9 @@
     <div id='contacts' class="clearfix otstup">
       <div class="centering">
       <h2>Контакты</h2>
-      <div id="map"></div>
-      <form class="map" >
+      <div id="map">
+      </div>
+      <form class="address" >
         Наш адрес:</br>
         Улица Каразина</br>
         Дом 2</br>
@@ -306,7 +301,9 @@
   </div>
 
   <footer id="footer" class="centering">
-     Copyright &copy; 2016 Evgeniy Tatarin
+    </br>
+    Copyright &copy; 2016 Evgeniy Tatarin
+    </br></br></br>
   </footer>
 
   </body>
