--- a/site.html
+++ b/site.html
@@ -88,7 +88,7 @@
 
 
     <div id='gallery' class="clearfix otstup">
-      <div class="centering">
+      <div class="centering content">
         <h2>Галерея</h2>
             <div class="galleryItem">
               <div class="galleryItemImg">
@@ -98,63 +98,63 @@
               <span class="caption">Картинка</span>
             </div>
             <div class="galleryItem">
-              <div style="position: relative; left: 0; top: 0;">
+              <div class="galleryItemImg">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/evkalipt-10.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
             </div>
             <div class="galleryItem">
-              <div style="position: relative; left: 0; top: 0;">
+              <div class="galleryItemImg">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img class="picture" src="imgs/5063-eucalyptus-oil-for-skin-hair-health.jpg"/>
               </div>
               <span class="caption">Картинка</span>
             </div>
             <div class="galleryItem">
-              <div style="position: relative; left: 0; top: 0;">
+              <div class="galleryItemImg">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/Azeite-de-oliva-remedios.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
             </div>
             <div class="galleryItem">
-              <div style="position: relative; left: 0; top: 0;">
+              <div class="galleryItemImg">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/how-to-cure-asthma-eucalyptus-oil.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
             </div>
             <div class="galleryItem">
-              <div style="position: relative; left: 0; top: 0;">
+              <div class="galleryItemImg">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/eucalyptus-oil-for-hair.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
             </div>
             <div class="galleryItem">
-              <div style="position: relative; left: 0; top: 0;">
+              <div class="galleryItemImg">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/tea-sinus.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
             </div>
             <div class="galleryItem">
-              <div style="position: relative; left: 0; top: 0;">
+              <div class="galleryItemImg">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/aceite-eucalipto.jpeg" class="picture">
               </div>
               <span class="caption">Картинка</span>
             </div>
             <div class="galleryItem">
-              <div style="position: relative; left: 0; top: 0;">
+              <div class="galleryItemImg">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/59d2ced7934e49dc5e991dd1e11bd6e1.jpg" class="picture">
               </div>
               <span class="caption">Картинка</span>
             </div>
             <div class="galleryItem">
-              <div style="position: relative; left: 0; top: 0;">
+              <div class="galleryItemImg">
                 <img class="lupa" src="imgs/mandat-recherche-achat.png"/>
                 <img src="imgs/851d874a192d8a2896516efc7c114c79.jpg" class="picture">
               </div>
