fixing comments section to be responsive

--- a/site.html
+++ b/site.html
@@ -166,9 +166,9 @@
       </div>
     </div>
 
-    <div id='comments' class="clearfix otstup">
+    <div id='comments' class="clearfix otstup centering">
       <div class="centering content">
-        <h2>Что о нас говорят</h2>
+          <h2>Что о нас говорят</h2>
         <div class="carousel-wrapper commentOut">
 
           	<input type="radio" checked="checked" id="slide1" class="carousel-selector" name="carousel-selector" />
@@ -185,13 +185,13 @@
           		<li class="carousel-item">
                 <div class="commentIn">
                   <img class="comment circular centeringImgInsideDiv" src="imgs/koala_35973701_orig_.jpg">
-            			<p class="textComment">"Раньше мне было стыдно, что я был вынужден есть листья у всех на виду, но теперь, я могу наслаждаться своим любимым эвкалиптом в культурном обществе."</p>
+            			<p class="textComment">"Раньше мне было стыдно, что я был вынужден есть листья у всех на виду, но теперь, я могу наслаждаться своим любимым эвкалиптом."</p>
                 </div>
           		</li>
           		<li class="carousel-item">
                 <div class="commentIn">
                   <img class="comment circular centeringImgInsideDiv" src="imgs/Кличко_Виталий_2.jpg">
-                  <p class="textComment">"У меня есть два заместителя, четыре из которых уже месяц лежат в кабинете министров, и которых назначить невозможно. Не знаю, почему."</p>
+                  <p class="textComment">"У меня есть два заместителя, четыре из которых уже месяц лежат в кабинете министров, и которых назначить невозможно."</p>
                 </div>
           		</li>
           	</ul>
@@ -207,7 +207,6 @@
           			<label for="slide3"></label>
           		</li>
           	</ul>
-
         </div>
       </div>
     </div>
